WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124560
[EFL] Initialize efreet before getting directories
https://bugs.webkit.org/show_bug.cgi?id=124560
Summary
[EFL] Initialize efreet before getting directories
Ryuan Choi
Reported
2013-11-18 21:39:49 PST
WebKit/Efl use efreet to get several directories including home dierectory since
r123731
. But it does not call efreet_init/efreet_shutdown explicitly. If it is not called, we will get below error(I reproduced it on EFL 1.8) ERROR: Failed to create database file '/WebKitEfl/LocalStorage/StorageTracker.db' /workspace/project/webkit/efl-webkit/Source/WebCore/storage/StorageTracker.cpp(144) : void WebCore::StorageTracker::openTrackerDatabase(bool)
Attachments
Patch
(3.83 KB, patch)
2013-11-18 21:53 PST
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2013-11-18 21:53:26 PST
Created
attachment 217270
[details]
Patch
Gyuyoung Kim
Comment 2
2013-11-18 23:12:04 PST
Comment on
attachment 217270
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=217270&action=review
Looks good except for a log.
> Source/WebKit2/UIProcess/API/efl/ewk_main.cpp:83 > + CRITICAL("could not init ecore_imf.");
ecore imf ? Isn't it correct "init efreet ?
Ryuan Choi
Comment 3
2013-11-18 23:15:01 PST
Comment on
attachment 217270
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=217270&action=review
>> Source/WebKit2/UIProcess/API/efl/ewk_main.cpp:83 >> + CRITICAL("could not init ecore_imf."); > > ecore imf ? Isn't it correct "init efreet ?
Oops, c&p mistake. I will fix it. Thanks.
Ryuan Choi
Comment 4
2013-11-18 23:50:21 PST
Committed
r159486
: <
http://trac.webkit.org/changeset/159486
>
Ryuan Choi
Comment 5
2013-11-18 23:50:43 PST
Comment on
attachment 217270
[details]
Patch Clearing flags.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug