[EFL] Initialize efreet before getting directories https://bugs.webkit.org/show_bug.cgi?id=124560

Reviewed by Gyuyoung Kim.

efreet is used to get several directories including home dierectory since
r123731, but it does not call efreet_init/efreet_shutdown explicitly.

Source/WebKit/efl:

* ewk/ewk_main.cpp: Call efreet_init()/efreet_shutdown() explicitly.
(ewk_init):
(ewk_shutdown):

Source/WebKit2:

* UIProcess/API/efl/ewk_main.cpp: Call efreet_init()/efreet_shutdown() explicitly.
(ewk_init):
(ewk_shutdown):

Canonical link: https://commits.webkit.org/142749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159486 268f45cc-cd09-0410-ab3c-d52691b4dbfc